--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@
 
 
 
-PORT=5000
-MONGO_URI = "mongodb+srv://shirisha:siri1234@cluster0.twumdsw.mongodb.net/Tutorials"
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
-JWT_SECRET=your_jwt_secret
-NODE_ENV=development
+PG_USER=postgres
+PG_PASSWORD=admin123
+PG_HOST=localhost
+PG_PORT=5432
+PG_DATABASE=mydb
+JWT_SECRET=mysupersecretkey
