--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.4.0",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.5.0"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
+    "pg": "^8.16.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
